--- a/views/topic/index.ejs
+++ b/views/topic/index.ejs
@@ -26,7 +26,7 @@
           <a href="topic/solved/page/1">已采纳</a>
           <a href="topic/excellent/page/1">精帖</a>
         </span>
-        <form action="/search" class="fly-search">
+        <form action="/search/topic" class="fly-search">
           <i class="iconfont icon-sousuo"></i>
           <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="keyword">
         </form>
