--- a/views/wisdom/index.ejs
+++ b/views/wisdom/index.ejs
@@ -21,14 +21,9 @@
     <div class="content" style="margin-right:0">
       <div class="fly-tab">
 
-        <!-- <form action="http://cn.bing.com/search" class="fly-search">
-          <i class="iconfont icon-sousuo"></i>
-          <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">
-        </form> -->
-
         <div class="layui-form-item">
           <div class="layui-inline">
-            <form class="layui-form" action="">
+            <div class="layui-form" action="">
               <div class="layui-form-item">
                 <label class="layui-form-label">学科分类</label>
                 <div class="layui-input-inline">
@@ -50,17 +45,16 @@
                   </select>
                 </div>
               </div>
-            </from>
+            </div>
           </div>
           <div class="layui-inline">
-            <form action="http://cn.bing.com/search" class="fly-search">
+            <form action="/search/wisdom" class="fly-search">
               <div class="layui-form-item">
-
-               <div class="layui-input-inline">
-              <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="q">
-              </div>
+              <i class="iconfont icon-sousuo"></i>
+              <input class="layui-input" autocomplete="off" placeholder="搜索内容，回车跳转" type="text" name="keyword">
               </div>
             </form>
+
           </div>
         </div>
 
