--- a/views/topic/edit.ejs
+++ b/views/topic/edit.ejs
@@ -13,13 +13,16 @@
 <div class="main layui-clear">
   <h2 class="page-title">发表问题</h2>
 
+  <% if(currentUser.get('id')!=post[0].get('questionerId')){ %>
+  <div class="fly-none">并无权限</div>
+  <% }else { %>
   <div class="layui-form layui-form-pane">
     <form action="{{d.edit ? '/jie/edit/' : ''}}" method="post">
       <div class="layui-form-item">
         <label for="L_title" class="layui-form-label">标题</label>
         <div class="layui-input-block">
           <% if(title=="编辑问题"){ %>
-          <input type="text" id="title" name="title" required lay-verify="required" autocomplete="off" value="" readonly title="标题不可修改" class="layui-input">
+          <input type="text" id="title" name="title" required lay-verify="required" autocomplete="off" value="<%= post[0].get('title') %>" readonly title="标题不可修改" class="layui-input">
           <% } else { %>
           <input type="text" id="title" name="title" autocomplete="off" class="layui-input"  onkeyup="this.value=this.value.replace(/^ +| +$/g,'')">
           <% } %>
@@ -27,7 +30,7 @@
       </div>
       <div class="layui-form-item layui-form-text">
         <div class="layui-input-block">
-          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"></textarea>
+          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"><%= post[0].get('content') %></textarea>
         </div>
         <label for="L_content" class="layui-form-label" style="top: -2px;">描述</label>
       </div>
@@ -37,27 +40,26 @@
           <div class="layui-input-block">
             <select lay-verify="required" id="topicClass" name="class">
               <option></option>
-              <option  value="博士问题">博士问题</option>
-              <option  value="企业问题">企业问题</option>
+              <option <% if(post[0].get('topicClass')=='博士问题'){ %> selected <% } %> value="博士问题">博士问题</option>
+              <option <% if(post[0].get('topicClass')=='企业问题'){ %> selected <% } %> value="企业问题">企业问题</option>
             </select>
           </div>
         </div>
         <div class="layui-inline">
           <label class="layui-form-label">悬赏博士点</label>
           <div class="layui-input-inline">
-            <input type="number" name="reward" id="reward" value="" autocomplete="off" class="layui-input">
+            <input type="number" name="reward" id="reward" value="<%= post[0].get('reward') %>" autocomplete="off" class="layui-input">
           </div>
         </div>
       </div>
       <div class="layui-form-item">
-        <% if(title=="编辑问题"){ %>
+
           <a class="layui-btn" id="post_edit">立即修改</a>
-        <% } else { %>
-         <a class="layui-btn" id="post_question">立即发布</a>
-        <% } %>
+
       </div>
     </form>
   </div>
+  <% } %>
 </div>
 
 <%- include("../footer.ejs") %>
@@ -68,7 +70,9 @@ layui.use(['jquery','layer'], function(){
   var layer = layui.layer
   var $ = layui.jquery;
   //监听提交
-  $("#post_question").click(function(){
+
+
+  $("#post_edit").click(function(){
     $.post(
       "/topic/add",
       {
@@ -77,7 +81,8 @@ layui.use(['jquery','layer'], function(){
         topicClass: $("#topicClass").val(),
         reward: $("#reward").val(),
         identity: '<%= identity %>',
-        isEidt: false
+        isEidt: true,
+        postId: '<%= post[0].get("id") %>'
       },
       function(data,status){
         if(data == 'success'){
@@ -88,7 +93,6 @@ layui.use(['jquery','layer'], function(){
       }
     )
   });
-
 });
 </script>
 
