--- a/views/topic/edit.ejs
+++ b/views/topic/edit.ejs
@@ -13,7 +13,7 @@
 <div class="main layui-clear">
   <h2 class="page-title">发表问题</h2>
 
-  <% if(currentUser.get('id')!=post[0].get('questionerId')){ %>
+  <% if(currentUser.get('id')!=post.get('questionerId')){ %>
   <div class="fly-none">并无权限</div>
   <% }else { %>
   <div class="layui-form layui-form-pane">
@@ -22,7 +22,7 @@
         <label for="L_title" class="layui-form-label">标题</label>
         <div class="layui-input-block">
           <% if(title=="编辑问题"){ %>
-          <input type="text" id="title" name="title" required lay-verify="required" autocomplete="off" value="<%= post[0].get('title') %>" readonly title="标题不可修改" class="layui-input">
+          <input type="text" id="title" name="title" required lay-verify="required" autocomplete="off" value="<%= post.get('title') %>" readonly title="标题不可修改" class="layui-input">
           <% } else { %>
           <input type="text" id="title" name="title" autocomplete="off" class="layui-input"  onkeyup="this.value=this.value.replace(/^ +| +$/g,'')">
           <% } %>
@@ -30,7 +30,7 @@
       </div>
       <div class="layui-form-item layui-form-text">
         <div class="layui-input-block">
-          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"><%= post[0].get('content') %></textarea>
+          <textarea id="content" name="content" placeholder="请输入内容" class="layui-textarea fly-editor" style="height: 260px;"><%= post.get('content') %></textarea>
         </div>
         <label for="L_content" class="layui-form-label" style="top: -2px;">描述</label>
       </div>
@@ -40,15 +40,15 @@
           <div class="layui-input-block">
             <select lay-verify="required" id="topicClass" name="class">
               <option></option>
-              <option <% if(post[0].get('topicClass')=='博士问题'){ %> selected <% } %> value="博士问题">博士问题</option>
-              <option <% if(post[0].get('topicClass')=='企业问题'){ %> selected <% } %> value="企业问题">企业问题</option>
+              <option <% if(post.get('topicClass')=='博士问题'){ %> selected <% } %> value="博士问题">博士问题</option>
+              <option <% if(post.get('topicClass')=='企业问题'){ %> selected <% } %> value="企业问题">企业问题</option>
             </select>
           </div>
         </div>
         <div class="layui-inline">
           <label class="layui-form-label">悬赏博士点</label>
           <div class="layui-input-inline">
-            <input type="number" name="reward" id="reward" value="<%= post[0].get('reward') %>" autocomplete="off" class="layui-input">
+            <input type="number" name="reward" id="reward" value="<%= post.get('reward') %>" autocomplete="off" class="layui-input">
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@ layui.use(['jquery','layer'], function(){
         reward: $("#reward").val(),
         identity: '<%= identity %>',
         isEidt: true,
-        postId: '<%= post[0].get("id") %>'
+        postId: '<%= post.get("id") %>'
       },
       function(data,status){
         if(data == 'success'){
