取消收藏功能
后台已经ok，样式还不行

--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -68,7 +68,7 @@
           <% if( collect==0 ){ %>
           <span class="jie-admin" type="collect" data-type="collect">收藏</span>
           <% }else{ %>
-          <span class="jie-admin" type="removeCollect" data-type="removeCollect">取消收藏</span>
+          <span class="jie-admin layui-btn-dange" type="collect" data-type="removeCollect">取消收藏</span>
           <% } %>
         </div>
       </div>
