--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -31,6 +31,7 @@
           <a href="javascript:;" class="tab-this" hash='mynews'>我的收藏</a>
           <!-- 收藏的智库 -->
           <a href="javascript:;" hash='mywisdom'>我的智库</a>
+          <a href="javascript:;" hash='message'>我的消息</a>
           <a href="javascript:;" hash='order'>我的订单</a>
           <a href="/users/home?uid=<%= uid %>">我的主页</a>
         </span>
