--- a/views/topic/detail.ejs
+++ b/views/topic/detail.ejs
@@ -122,7 +122,7 @@
                 <%= reply.get('replyContent') %>
               </div>
               <div class="jieda-reply">
-              <span class="jieda-zan {{d.session['zan'+item.id] ? 'zanok' : ''}}" type="zan">
+              <span class="jieda-zan" type="zan">
                 <i class="iconfont icon-zan"></i>
                 <em><%= reply.get('zan') %></em>
               </span>
