--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -11,48 +11,89 @@
 <%- include("../header.ejs") %>
 
 <div class="main layui-clear">
-  <h2 class="page-title">注册</h2>
-  <div class="layui-form layui-form-pane">
-    <form method="post">
-      <div class="layui-form-item">
-        <label for="L_phone" class="layui-form-label">手机号</label>
-        <div class="layui-input-inline">
-          <input type="tel" id="L_phone" name="phone" required lay-verify="phone" autocomplete="off" class="layui-input">
-        </div>
+
+  <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+    <legend>注册</legend>
+  </fieldset>
+  <div class="layui-tab" lay-filter="reg">
+    <ul class="layui-tab-title">
+      <li class="layui-this" lay-id="phone">手机注册</li>
+      <li lay-id="email">邮箱注册</li>
+    </ul>
+    <div class="layui-tab-content" style="padding-left: 0px;">
+      <div class="layui-tab-item layui-show layui-form layui-form-pane">
+        <br>
+        <form method="post">
+          <div class="layui-form-item">
+            <label for="L_phone" class="layui-form-label">手机号</label>
+            <div class="layui-input-inline">
+              <input type="tel" id="L_phone" name="phone" required lay-verify="phone" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <!-- <div class="layui-form-item">
+            <label for="L_username" class="layui-form-label">昵称</label>
+            <div class="layui-input-inline">
+              <input type="text" id="L_username" name="username" required lay-verify="required" autocomplete="off" class="layui-input">
+            </div>
+          </div> -->
+          <div class="layui-form-item">
+            <label for="L_pass" class="layui-form-label">密码</label>
+            <div class="layui-input-inline">
+              <input type="password" id="L_pass" name="pass" required lay-verify="required" autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-form-mid layui-word-aux">6到16个字符</div>
+          </div>
+          <div class="layui-form-item">
+            <label for="L_repass" class="layui-form-label">确认密码</label>
+            <div class="layui-input-inline">
+              <input type="password" id="L_repass" name="repass" required lay-verify="required" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <label for="L_vercode" class="layui-form-label">验证码</label>
+            <div class="layui-input-inline">
+              <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入收到的验证码" autocomplete="off" class="layui-input">
+            </div>
+            <a id="get_vercode" class="layui-btn layui-btn-primary">获取短信验证码</a>
+            <button class="layui-btn layui-btn-disabled" id="J_resetCode" style="display:none;"><span id="J_second">60</span>秒后重发</button>
+          </div>
+          <div class="layui-form-item">
+            <a id="reg" class="layui-btn" lay-filter="*">立即注册</a>
+          </div>
+
+        </form>
       </div>
-      <!-- <div class="layui-form-item">
-        <label for="L_username" class="layui-form-label">昵称</label>
-        <div class="layui-input-inline">
-          <input type="text" id="L_username" name="username" required lay-verify="required" autocomplete="off" class="layui-input">
-        </div>
-      </div> -->
-      <div class="layui-form-item">
-        <label for="L_pass" class="layui-form-label">密码</label>
-        <div class="layui-input-inline">
-          <input type="password" id="L_pass" name="pass" required lay-verify="required" autocomplete="off" class="layui-input">
-        </div>
-        <div class="layui-form-mid layui-word-aux">6到16个字符</div>
+      <div class="layui-tab-item layui-form layui-form-pane">
+        <br>
+        <form method="post">
+          <div class="layui-form-item">
+            <label for="L_email" class="layui-form-label">邮箱</label>
+            <div class="layui-input-inline">
+              <input type="text" id="L_email" name="email" required lay-verify="email" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <label for="L_pass" class="layui-form-label">密码</label>
+            <div class="layui-input-inline">
+              <input type="password" id="E_pass" name="Epass" required lay-verify="required" autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-form-mid layui-word-aux">6到16个字符</div>
+          </div>
+          <div class="layui-form-item">
+            <label for="L_repass" class="layui-form-label">确认密码</label>
+            <div class="layui-input-inline">
+              <input type="password" id="E_repass" name="Erepass" required lay-verify="required" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <a id="regForEmail" class="layui-btn" lay-filter="*">立即注册</a>
+          </div>
+
+        </form>
       </div>
-      <div class="layui-form-item">
-        <label for="L_repass" class="layui-form-label">确认密码</label>
-        <div class="layui-input-inline">
-          <input type="password" id="L_repass" name="repass" required lay-verify="required" autocomplete="off" class="layui-input">
-        </div>
-      </div>
-      <div class="layui-form-item">
-        <label for="L_vercode" class="layui-form-label">验证码</label>
-        <div class="layui-input-inline">
-          <input type="text" id="L_vercode" name="vercode" required lay-verify="required" placeholder="请输入收到的验证码" autocomplete="off" class="layui-input">
-        </div>
-        <a id="get_vercode" class="layui-btn layui-btn-primary">获取短信验证码</a>
-        <button class="layui-btn layui-btn-disabled" id="J_resetCode" style="display:none;"><span id="J_second">60</span>秒后重发</button>
-      </div>
-      <div class="layui-form-item">
-        <a id="reg" class="layui-btn" lay-filter="*">立即注册</a>
-      </div>
-    
-    </form>
+    </div>
   </div>
+
 </div>
 
 <%- include("../footer.ejs") %>
@@ -111,7 +152,68 @@
         }
       )
     });
+
+    $('#regForEmail').click(function() {
+      $.post(
+        "/users/regForEmail",
+        {
+          email: $("#L_email").val(),
+          pass: $("#E_pass").val(),
+          repass: $("#E_repass").val()
+        },
+        function(data, status){
+          if(data=='success'){
+            window.location.href="/topic";
+          }else{
+            layer.msg(data);
+          }
+        }
+      )
+    })
   });
+</script>
+<script>
+layui.use('element', function(){
+  var $ = layui.jquery
+  ,element = layui.element(); //Tab的切换功能，切换事件监听等，需要依赖element模块
+
+  //触发事件
+  var active = {
+    tabAdd: function(){
+      //新增一个Tab项
+      element.tabAdd('demo', {
+        title: '新选项'+ (Math.random()*1000|0) //用于演示
+        ,content: '内容'+ (Math.random()*1000|0)
+        ,id: new Date().getTime() //实际使用一般是规定好的id，这里以时间戳模拟下
+      })
+    }
+    ,tabDelete: function(othis){
+      //删除指定Tab项
+      element.tabDelete('demo', '44'); //删除：“商品管理”
+
+
+      othis.addClass('layui-btn-disabled');
+    }
+    ,tabChange: function(){
+      //切换到指定Tab项
+      element.tabChange('demo', '22'); //切换到：用户管理
+    }
+  };
+
+  $('.site-demo-active').on('click', function(){
+    var othis = $(this), type = othis.data('type');
+    active[type] ? active[type].call(this, othis) : '';
+  });
+
+  //Hash地址的定位
+  var layid = location.hash.replace(/^#test=/, '');
+  element.tabChange('test', layid);
+
+  element.on('tab(test)', function(elem){
+    location.hash = 'test='+ $(this).attr('lay-id');
+  });
+
+});
 </script>
 
 </body>
