--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -17,7 +17,7 @@
       <div class="layui-form-item">
         <label for="L_phone" class="layui-form-label">手机或邮箱</label>
         <div class="layui-input-inline">
-          <input type="tel" id="L_phone" name="phone" required lay-verify="phone" autocomplete="off" class="layui-input">
+          <input type="text" id="L_phone" name="phone" required lay-verify="phone" autocomplete="off" class="layui-input">
         </div>
       </div>
       <div class="layui-form-item">
