--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,13 @@
 <link href="/stylesheets/flexslider.css" rel="stylesheet" />
 <link href="/stylesheets/style1.css" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
-<script src="/javascripts/jquery.min.js"></script>
+<script src="/javascripts/jquery-2.1.1.min.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 </head>
 <body>
 <div class="header">
   <div class="container"> <a class="navbar-brand" href="/"> 博士直通车 </a>
-    <div class="menu"> <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /> </a>
+    <div class="menu"> <a class="toggleMenu" href="#"><img src="/res/images/nav_icon.png" alt="" /> </a>
       <ul class="nav" id="nav">
         <li><a href="/about">关于我们</a></li>
         <li><a href="/contact">联系我们</a></li>
