--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -12,10 +12,16 @@
 
 <%- include("../header.ejs") %>
 
-<div class="fly-home" style="background-image: url();padding-bottom: 34px;">
+<div  class="fly-home" style="background-image: url();padding-bottom: 34px;">
   <img src=<%= thisUser[0].get('avatar') %> alt=<%= thisUser[0].get('nickname') %>>
-  <h1><%= thisUser[0].get('nickname') %>
-    <button class="layui-btn layui-btn-primary layui-btn-mini">关注</button>
+  <h1 data-id="<%= thisUser[0].get('id') %>"><%= thisUser[0].get('nickname') %>
+    <% if( currentUser.get('id')!=thisUser[0].get('id')){ %>
+      <% if( isAttent ==1 ){ %>
+        <span class="jie-admin layui-btn layui-btn-warm layui-btn-danger layui-btn-mini" type="attent" data-type="removeAttent">取消关注</span>
+        <% }else{ %>
+        <span class="jie-admin layui-btn layui-btn-warm layui-btn-mini" type="attent" data-type="attent">关注</span>
+        <% } %>
+    <% } %>
   </h1>
   <div class="layui-main">
     <p style="display: inline-block; max-width: 800px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; color: #999; margin-top: 10px;">（<%= thisUser[0].get('signature')||'这个人懒得留下签名' %>）</p>
@@ -73,6 +79,7 @@
 
 <%- include("../footer.ejs") %>
 <script>
+layui.cache.page = 'jie';
 layui.use('layer',function(){
   var $ = layui.jquery, layer = layui.layer;
   $('#chat').click(function() {
@@ -133,7 +140,6 @@ layui.use('layer',function(){
     function(data, status){
       length = data.length;
       for(var i=0;i<length;i++){
-        console.log(data[i].post);
         var string = '';
         string += '<li>';
         var time = new Date(data[i].createdAt);
